--- a/dicas.qmd
+++ b/dicas.qmd
@@ -24,10 +24,13 @@ Queridas convidadas, **evitem** usar as cores terracota e verde-esmeralda pois s
 
 E lembre-se: A cor branca é só para a noiva!
 
+## Crianças
+
+As crianças são participantes muito especiais neste dia! Caso você vá levar alguma criança, saiba que contratamos uma equipe de recreação (a [Bambalalão](https://www.instagram.com/bambalalao.recreacao/?hl=en))! Recomendamos que vista as crianças para que elas estejam confortáveis para brincar :)
+
 ## Hotéis
 
 Para pessoas que moram fora da Região Metropolitana de São Paulo, listamos alguns hotéis na cidade de São Bernardo do Campo:
-
 :::
 
 ::: {.content-visible when-profile="english"}
