--- a/cerimonia.qmd
+++ b/cerimonia.qmd
@@ -17,7 +17,7 @@ toc: false
 
 A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi, que fica em São Bernardo do Campo - SP.
 
-**Data:** 14/10/2023 às 10h00
+**Data:** 14/10/2023 às 10h30
 :::
 
 ::: {.content-visible when-profile="english"}
@@ -27,7 +27,7 @@ A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi
 
 The ceremony and wedding party will take place at Sítio São Jorge - Demarchi, located in São Bernardo do Campo - São Paulo, Brazil.
 
-**Date:** October 14th 2023, 10h AM.
+**Date:** October 14th 2023, 10h30 AM.
 :::
 
 <center>
