--- a/presentes.qmd
+++ b/presentes.qmd
@@ -16,9 +16,10 @@ toc: true
 
 ![](images/floral.jpg){.nolightbox fig-align="center" style="margin-top: -30px;"}
 
-Esta lista de presentes é feita de produtos desejados Cada item representa um valor que será convertido em dinheiro.
-
 Lembre-se que **o presente é completamente opcional**! O que mais queremos é a presença de pessoas queridas e que torcem pela nossa felicidade!
+
+
+Existem duas listas de presente: uma lista na **[Amazon](https://www.amazon.com.br/hz/wishlist/ls/UO6CJ6NL8M7D?ref_=wl_share)**, e uma lista  feita de produtos desejados, onde cada item representa um valor que será convertido em dinheiro.
 :::
 
 
