--- a/index.qmd
+++ b/index.qmd
@@ -70,16 +70,16 @@ var x = setInterval(function() {
   var distance = countDownDate - now;
 
   // Time calculations for days, hours, minutes and seconds
-  var months = Math.floor(distance/(1000 * 60 * 60 * 24 * 30)); 
+  var months = Math.floor(distance/(1000 * 60 * 60 * 24 * 30));
   var days_total = Math.ceil(distance / (1000 * 60 * 60 * 24));
   var days = Math.floor(days_total - (30*months));
 
 
   // Display the result in the element with id="demo"
-  document.getElementById("demo-pt").innerHTML = months + " meses e " + days + " dias até o casamento!";
-  
+  document.getElementById("demo-pt").innerHTML = days_total + " dias até o casamento!";
+
     // Display the result in the element with id="demo"
-  document.getElementById("demo-en").innerHTML = months + " months and " + days + " days until the wedding!";
+  document.getElementById("demo-en").innerHTML =  days_total + " days until the wedding!";
 
   // If the count down is finished, write some text
   if (distance < 0) {
