--- a/mural-mensagens.qmd
+++ b/mural-mensagens.qmd
@@ -64,7 +64,7 @@ function createMessageElement(messageData) {
     innerDiv.classList.add('message');
     messageElement.appendChild(innerDiv);
 
-    const usernameElement = document.createElement('span');
+    const usernameElement = document.createElement('strong');
     usernameElement.classList.add('username');
     usernameElement.textContent = messageData.username;
     innerDiv.appendChild(usernameElement);
