--- a/dicas.qmd
+++ b/dicas.qmd
@@ -28,6 +28,11 @@ E lembre-se: Vestido branco é só para a noiva!
 
 As crianças são participantes muito especiais neste dia! Caso você vá levar alguma criança, saiba que contratamos uma equipe de recreação (a [Bambalalão](https://www.instagram.com/bambalalao.recreacao/?hl=en))! Recomendamos que vista as crianças para que elas estejam confortáveis para brincar :)
 
+## Estacionamento
+
+No espaço do evento, tem estacionamento sem custo para os convidados. Porém, lembramos que teremos **open bar de drinks e cerveja**. Caso queira beber, recomendamos vir de Uber ou similares.
+
+
 ## Hotéis
 
 Para pessoas que moram fora da Região Metropolitana de São Paulo, listamos alguns hotéis na cidade de São Bernardo do Campo. Esses hotéis ficam próximos ao **Shopping Metrópole**, cerca de 15 minutos do local da cerimônia (de carro).
