--- a/index.qmd
+++ b/index.qmd
@@ -53,7 +53,7 @@ Foto por *[Chocolatte Fotoarte](https://www.chocolatte-fotoarte.com/)*.
 ```{=html}
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("oct 14, 2023 10:00:00").getTime();
+var countDownDate = new Date("2023-10-14T00:00:00.000-03:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
