--- a/celebracao.qmd
+++ b/celebracao.qmd
@@ -11,21 +11,21 @@ toc: false
 ---
 
 ::: {.content-visible when-profile="portugues"}
-# Cerimônia e festa
+# Celebração e festa
 
 ![](images/floral.jpg){.nolightbox fig-align="center" style="margin-top: -30px;"}
 
-A cerimônia e a festa de casamento acontecerão no Sítio São Jorge - Demarchi, que fica em São Bernardo do Campo - SP.
+A celebração (não-religiosa) e a festa de casamento acontecerão no Sítio São Jorge - Demarchi, que fica em São Bernardo do Campo - SP.
 
 **Data:** 14/10/2023 às 10h30
 :::
 
 ::: {.content-visible when-profile="english"}
-# Ceremony and Wedding party
+# Celebration and Wedding party
 
 ![](images/floral.jpg){.nolightbox fig-align="center" style="margin-top: -30px;"}
 
-The ceremony and wedding party will take place at Sítio São Jorge - Demarchi, located in São Bernardo do Campo - São Paulo, Brazil.
+The celebration and wedding party will take place at Sítio São Jorge - Demarchi, located in São Bernardo do Campo - São Paulo, Brazil.
 
 **Date:** October 14th 2023, 10h30 AM.
 :::
@@ -33,7 +33,7 @@ The ceremony and wedding party will take place at Sítio São Jorge - Demarchi, 
 <center>
 
 ::: {layout="[[1,1]]"}
-![Cerimônia/Ceremony - Sítio São Jorge - Demarchi](images/demarchi.jpeg){group="espaco"}
+![Celebração/Celebration - Sítio São Jorge - Demarchi](images/demarchi.jpeg){group="espaco"}
 
 ![Festa/Wedding Party - Sítio São Jorge - Demarchi](images/demarchi2.jpeg){group="espaco"}
 :::
