--- a/presentes.qmd
+++ b/presentes.qmd
@@ -117,18 +117,8 @@ gerar_tabela_presentes_recebidos <- function(dados) {
 ## Household Utensils
 :::
 
-::: grid
-```{r}
-utensilios_domesticos <- planilha_presentes_nao_recebidos |>
-  dplyr::filter(categoria == "utensilios_domesticos") 
+Agradecemos muito! Recebemos os presentes listados nessa categoria <3
 
-if(nrow(utensilios_domesticos) > 0){
-    gerar_tabela_presentes(utensilios_domesticos)
-} else {
-  cat("Agradecemos muito! Recebemos os presentes listados nessa categoria <3")
-}
-```
-:::
 
 ::: {.content-visible when-profile="portugues"}
 ## Cama, mesa e banho
